# triangulate

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.html  README.md  index.cfg  index.html
source/: triangulate_command.cpp  triangulate_command.hpp  triangulate_helper.cpp  triangulate_helper.hpp  triangulate_initialize.cpp  triangulate_meshop.cpp  triangulate_meshop.hpp  triangulate_tool.cpp  triangulate_tool.hpp  util.hpp
